versions/2.3.0-beta/dialog-and-text/dialog.md
# Dialog

You can customize how a dialog can render in game for a character.

For this, open story manager and click on the `D` button.

A fake player will appear and a dialog will be rendered.

From here, you can personalize pretty much anything you want. If you want advanced customization, click on the little three dots on the left panel and a right panel will appear with more customization options.

## Background and Sounds

You can also set a background image and a custom letter sound.

To make it work, it has to be a resource location link.

For example, if your image is stored here in your resource pack `minecraft/assets/textures/dialog-bg.png`

then on BG image set `textures/dialog-bg.png`

If your image is stored on another id like `mycustomid/assets/textures/dialog-bg.png`

then on BG image set `mycustomid:textures/dialog-bg.png`

The same applies for letter sound.

`default` label is the path of the default letter sound

## Head bobbing

While a character is talking, their head bobs with a noise-based shake. Two advanced fields control it:

- `Bob Speed`: how fast the head moves. Defaults to `2.9`.
- `Bob Strength`: how far it moves. Defaults to `2.15`.

Set `Bob Strength` to `0` to disable the effect.

Both fields are only available on the global dialog data, not on character or camera view data.

## Layer

There's 3 types of layer :
- Global data
- Character data
- Camera view data


To customize a character dialog rendering, go to character list, select your character and press `D` button.

On a character, you can only edit :
- bg color
- opacity of bg color
- text color
- tail visibility
- text shadow
- bg image
- letter sound


on a camera view :
- offset x and y
- scale
